--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -26,6 +26,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Generating Charts...
+      run: |
         bash ./auto
     - name: commit
       id: commit
