--- a/.github/workflows/update-single.yml
+++ b/.github/workflows/update-single.yml
@@ -1,12 +1,10 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: bili-up-watcher
+name: one-watcher
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '1 */2 * * *'
 
 jobs:
   build:
@@ -27,7 +25,7 @@ jobs:
 
     - name: Generating Charts...
       run: |
-        bash ./auto
+        bash ./one 5
 
     - name: commit
       id: commit
