--- a/.github/workflows/update-single.yml
+++ b/.github/workflows/update-single.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: one-watcher
 
 on:
@@ -25,7 +22,7 @@ jobs:
 
     - name: Generating Charts...
       run: |
-        bash ./one 5
+        bash ./one
 
     - name: commit
       id: commit
